Fix username field in device setup

--- a/fs/index.html
+++ b/fs/index.html
@@ -21,10 +21,10 @@
           <small id="ssidHelp" class="form-text text-muted">This is also known as the SSID, or AP name.</small>
         </div>
 
-        <!-- PASS -->
+        <!-- USER -->
         <div class="form-group">
-          <label for="pass">Wi-Fi Username (optional)</label>
-          <input type="password" class="form-control" id="pass" placeholder="Enter Wi-Fi Username">
+          <label for="user">Wi-Fi Username (optional)</label>
+          <input type="text" class="form-control" id="user" placeholder="Enter Wi-Fi Username">
         </div>
 
         <!-- PASS -->
