Clean up device config and add user support

--- a/fs/index.html
+++ b/fs/index.html
@@ -9,27 +9,28 @@
     </nav>
     <div class="container">
       <br>
-      <h1>Welcome to your Device Config</h1>
+      <h1 id="device">IoWine Device</h1>
+      <h2>Welcome to your Device Config</h2>
       <p>To get everything connected, please enter your Wi-Fi credentials below.</p>
 
       <form>
 
         <!-- SSID -->
         <div class="form-group">
-          <label for="ssid">Wi-Fi Network</label>
+          <label for="ssid">* Wi-Fi Network</label>
           <input type="text" class="form-control" id="ssid" aria-describedby="ssidHelp" placeholder="Enter Wi-Fi Network Name">
           <small id="ssidHelp" class="form-text text-muted">This is also known as the SSID, or AP name.</small>
         </div>
 
         <!-- USER -->
         <div class="form-group">
-          <label for="user">Wi-Fi Username (optional)</label>
+          <label for="user">Wi-Fi Username (eduroam optional)</label>
           <input type="text" class="form-control" id="user" placeholder="Enter Wi-Fi Username">
         </div>
 
         <!-- PASS -->
         <div class="form-group">
-          <label for="pass">Wi-Fi Password</label>
+          <label for="pass">* Wi-Fi Password</label>
           <input type="password" class="form-control" id="pass" placeholder="Enter Wi-Fi Password">
         </div>
         
